Parent the relaunch recommended bubble to the browser window.

This fixes a bug on macOS when using a Cocoa-based browser, whereby the
bubble was not attached to the browser window.

BUG=819546

Change-Id: Ia465a0ba9251e33b3b6fc9c6756445d1399ff79a
Reviewed-on: https://chromium-review.googlesource.com/952926
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Greg Thompson <grt@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541443}
Former-commit-id: 68d0edd5d225f8a6c755afaf3134a9665a99f4d5